--- a/close-to-water/index.html
+++ b/close-to-water/index.html
@@ -72,10 +72,11 @@
         </div>
     </div>
     <div class="trans">
-        <div class="trans-text">台灣各地的水域開放情形不一，但大多數的區域，依然是禁止為優先，開放為例外。<br>
-            只有少部分區域（像是高雄愛河，或台北新店溪）可以在特定時間下水進行遊憩活動。<br>
-            其他地方就算開放了，也大多為開放給特定業者或經營單位。<br>
-            民眾如果想要下水，大多得付費或經過冗長的申請過程，並且不一定會通過。
+        <div class="trans-text">
+            <div class="">台灣各地的水域開放情形不一，但大多數的區域，依然是禁止為優先，開放為例外。</div>
+            <div class="pt5">只有少部分區域（像是高雄愛河，或台北新店溪）可以在特定時間下水進行遊憩活動。</div>
+            <div class="pt5">其他地方就算開放了，也大多為開放給特定業者或經營單位。</div>
+            <div class="pt5">民眾如果想要下水，大多得付費或經過冗長的申請過程，並且不一定會通過。</div>
         </div>
     </div>
     <div id="area2" class="container-fluid" style="min-height:500px">
@@ -100,8 +101,10 @@
     </div>
     <div id="ch2-intro" class="trans">
         <div class="trans-text">
-            那台灣的法律，到底怎麼管理人民下水這件事情呢？<br>
-            我們和河流與水域之間，有哪些距離呢？<br>
+            <div class="">那台灣的法律，</div>
+            <div class="pt5">到底怎麼管理人民下水這件事情呢？</div>
+            <div class="pt5">我們和河流與水域之間，</div>
+            <div class="pt5">有哪些距離呢？</div>
         </div>
     </div>
     <div id="area4" class="container-fluid">
@@ -137,13 +140,14 @@
                 </div>
             </div>
 
+            <div id="detect-ch2">x</div>
         </div>
     </div>
     <div class="trans">
         <div class="trans-text">
-            以上三種法律，是縣市政府最常拿出來，告知民眾不得下水的法源依據。<br>
-            尤其是《發展觀光條例》第5條，及《水域遊憩管理辦法》第36條，是民眾最常被罰款的原因。<br>
-            在這兩條法律中明定，出於安全理由，縣市政府可禁止人民下水，並處以罰鍰。
+            <div class="">以上三種法律，是縣市政府最常拿出來，告知民眾不得下水的法源依據。</div>
+            <div class="pt5">尤其是《發展觀光條例》第5條，及《水域遊憩管理辦法》第36條，是民眾最常被罰款的原因。</div>
+            <div class="pt5">在這兩條法律中明定，出於安全理由，縣市政府可禁止人民下水，並處以罰鍰。</div>
         </div>
     </div>
 
@@ -155,6 +159,7 @@
         </div>
     </div>
     <div id="area6" class="container-fluid" style="color:white;background-color:#888;min-height:500px">
+        <div id="20a14ba7-e563-4847-9af9-967882bbcedd"></div>
         <script>
             (function () {
                 var namespace = '__twreporterEmbeddedData';
@@ -167,42 +172,16 @@
                         window[namespace][pkg] = [];
                     }
                     if (Array.isArray(window[namespace][pkg])) {
-                        var data = { "video": { "sources": [{ "type": "video\u002Fmp4", "src": "https:\u002F\u002Fdrive.google.com\u002Ffile\u002Fd\u002F1zSs8fzqvs8Vsi4hi9I8noSvlX7D5TP5v\u002Fview?usp=sharing", "width": 1280, "height": 720 }] }, "captions": [{ "text": "這是宜蘭縣，", "time": 1 }, { "text": "一個由水組成的三角洲平原。", "time": 3 }, { "text": "每年下雨超過200天，\n年平均降雨量超過2700mm，\n比起全台平均約只有1800mm，\n居民的生活與水緊密相連。", "time": 5 }], "appProps": { "captionsSetting": { "xBoxAlign": "right", "xPosition": "8.7%", "yBoxAlign": "bottom", "yPosition": "20px" }, "captionSetting": { "textAlign": "right" }, "secondsPer100vh": 1.5, "skipLoadLocationRegExp": "editor", "forcedPreloadVideo": true, "gsapVersion": "3.5.1", "scrollTriggerVersion": "3.5.1", "pollingTimeout": 700, "preloadCacheType": "force-cache" }, "theme": { "mq": { "mobileMaxWidth": "767px" }, "captions": { "color": "#fff", "link": { "color": "#a67a44", "underlineColor": "#a67a44" }, "lineHieght": "1.7", "mobileLineHeight": "1.7", "fontStyle": "normal", "fontWeight": "bold", "fontSize": "24px", "mobile": { "fontSize": "22px" }, "fontFamily": "ff-tisa-web-pro, source-han-sans-traditional, Noto Sans TC, PingFang TC, Apple LiGothic Medium, Roboto, Microsoft JhengHei, Lucida Grande, Lucida Sans Unicode, sans-serif", "box": { "background": "#404040", "width": "450px", "mobileWidth": "77%", "spanPadding": "6px 15px", "mobilePadding": "12px 12px 14px 18px" } } }, "uuid": "366afa90-bbb8-4ae5-8fc9-0ef468478ec0" };
+                        var data = { "video": { "sources": [{ "type": "video\u002Fmp4", "src": "https:\u002F\u002Fgithub.com\u002Fytchen7749\u002Fytchen7749.github.io\u002Fblob\u002Fe9e844002fa94c381c28a7b913f341d9488c1056\u002Fclose-to-water\u002Fmaterials\u002Fch3_video_v1_s.mp4", "width": 1280, "height": 720 }] }, "captions": [{ "text": "這是宜蘭縣，", "time": 1 }, { "text": "一個由水組成的三角洲平原。", "time": 3 }, { "text": "每年下雨超過200天，\n年平均降雨量超過2700mm，\n比起全台平均約只有1800mm，\n居民的生活與水緊密相連。", "time": 5 }, { "text": "這是冬山河，", "time": 16 }, { "text": "宜蘭的第五大河流。", "time": 18 }, { "text": "發源於約1000公尺的新寮山，\n並在丸山、太和附近注入蘭陽平原。\n與舊時噶瑪蘭人的居住領域息息相關。", "time": 20 }, { "text": "它坡度落差大，攜帶大量泥沙，\n因此下游的冬山利澤等地區經常氾濫。", "time": 22 }, { "text": "民國63年，遭受「范迪」及「瓊絲」颱風的影響，\n冬山河不僅氾濫，更危及農業發展。\n宜蘭縣政府奉命進行整治工作。", "time": 25 }, { "text": "整治後變得整齊的冬山河，\n雖然解決了氾濫的問題，\n卻出現了大量的工業民用廢水污染。\n因此，地方居民及政府重新思考河川的定位。", "time": 28 }, { "text": "冬山河變成了兼具教育與景觀的場所，\n它是宜蘭人端午龍舟的回憶，\n也是許多縣內學生的環境教育場域。\n是親水的場域。", "time": 35 }, { "text": "就像是標點上的生態綠洲，\n是宜蘭縣綠色博覽會的舉辦地。", "time": 38 }, { "text": "然而，冬山河定位「親水」的現狀是，\n除了特定活動外，\n居民卻難以親近現在的冬山河。\n就像是生態綠洲的管轄權屬於縣政府。\n因為便於管理的關係，\n如果一般民眾要下水，\n必須先通過冗長的公文申請。\n且不一定會通過。", "time": 40 }, { "text": "但旁邊的舊河道又要找冬山鄉公所。", "time": 47 }, { "text": "讓我們看看另一個冬山河上的案例。", "time": 65 }, { "text": "這裡是著名的冬山河親水公園，\n也是台灣民眾可能都參與過的「童玩節」舉辦地。", "time": 69 }, { "text": "如果喜愛水上運動的人，\n想要乘著無動力SUP（立槳）\n從親水公園到靠近民居的舊河道，\n也可能會被開罰。", "time": 77 }, { "text": "畢竟現在利澤附近的舊河道，\n連管轄全都不清楚，\n在氾濫整治後，\n亂填土與佔據地的情形頻繁發生，\n有些在地民眾舉辦的親水活動，\n但都如曇花一現無法長久經營。", "time": 83 }, { "text": "除了縣政府工商旅遊處、農田水利署、鄉公所的管理外，\n當冬山河成了水上國手的水上訓練基地時，\n管轄機關還多了教育處。\n也就是非訓練選手的人無法下水。", "time": 96 }, { "text": "這是冬山河，\n宜蘭人的河流。", "time": 105 }, { "text": "但現在卻在政府的治理下，\n與民眾距離非常遙遠。", "time": 108 }], "appProps": { "captionsSetting": { "xBoxAlign": "right", "xPosition": "8.7%", "yBoxAlign": "bottom", "yPosition": "20px" }, "captionSetting": { "textAlign": "right" }, "secondsPer100vh": 1.5, "skipLoadLocationRegExp": "editor", "forcedPreloadVideo": true, "gsapVersion": "3.5.1", "scrollTriggerVersion": "3.5.1", "pollingTimeout": 700, "preloadCacheType": "force-cache" }, "theme": { "mq": { "mobileMaxWidth": "767px" }, "captions": { "color": "#fff", "link": { "color": "#a67a44", "underlineColor": "#a67a44" }, "lineHieght": "1.7", "mobileLineHeight": "1.7", "fontStyle": "normal", "fontWeight": "bold", "fontSize": "24px", "mobile": { "fontSize": "22px" }, "fontFamily": "ff-tisa-web-pro, source-han-sans-traditional, Noto Sans TC, PingFang TC, Apple LiGothic Medium, Roboto, Microsoft JhengHei, Lucida Grande, Lucida Sans Unicode, sans-serif", "box": { "background": "#404040", "width": "450px", "mobileWidth": "77%", "spanPadding": "6px 15px", "mobilePadding": "12px 12px 14px 18px" } } }, "uuid": "20a14ba7-e563-4847-9af9-967882bbcedd" };
                         window[namespace][pkg].push(data);
                     }
                 }
             })()
         </script>
-        <div id="366afa90-bbb8-4ae5-8fc9-0ef468478ec0"></div>
-
-        <script type="text/javascript" crossorigin
-            src="https://unpkg.com/@twreporter/scrollable-video@1.0.3/dist/main.86a0a5788205961bf35c.bundle.js"></script>
-
-        <script>
-                (function () {
-                    var namespace = '__twreporterEmbeddedData';
-                    var pkg = 'scrollable-video';
-                    if (typeof window != 'undefined') {
-                        if (!window.hasOwnProperty(namespace)) {
-                            window[namespace] = {};
-                        }
-                        if (window[namespace] && !window[namespace].hasOwnProperty(pkg)) {
-                            window[namespace][pkg] = [];
-                        }
-                        if (Array.isArray(window[namespace][pkg])) {
-                            var data = { "video": { "sources": [{ "type": "video\u002Fmp4", "src": "https:\u002F\u002Fdrive.google.com\u002Ffile\u002Fd\u002F1AqxELb72urc2BEsgOQWjKspohxcBLtxH\u002Fview?usp=sharing", "width": 1280, "height": 720 }] }, "captions": [{ "text": "這是冬山河，", "time": 1 }, { "text": "宜蘭的第五大河流。", "time": 3 }, { "text": "發源於約1000公尺的新寮山，\n並在丸山、太和附近注入蘭陽平原。\n與舊時噶瑪蘭人的居住領域息息相關。", "time": 5 }, { "text": "它坡度落差大，攜帶大量泥沙，\n因此下游的冬山利澤等地區經常氾濫。", "time": 7 }, { "text": "民國63年，遭受「范迪」及「瓊絲」颱風的影響，\n冬山河不僅氾濫，更危及農業發展。\n宜蘭縣政府奉命進行整治工作。", "time": 10 }], "appProps": { "captionsSetting": { "xBoxAlign": "right", "xPosition": "8.7%", "yBoxAlign": "bottom", "yPosition": "20px" }, "captionSetting": { "textAlign": "right" }, "secondsPer100vh": 1.5, "skipLoadLocationRegExp": "editor", "forcedPreloadVideo": true, "gsapVersion": "3.5.1", "scrollTriggerVersion": "3.5.1", "pollingTimeout": 700, "preloadCacheType": "force-cache" }, "theme": { "mq": { "mobileMaxWidth": "767px" }, "captions": { "color": "#fff", "link": { "color": "#a67a44", "underlineColor": "#a67a44" }, "lineHieght": "1.7", "mobileLineHeight": "1.7", "fontStyle": "normal", "fontWeight": "bold", "fontSize": "24px", "mobile": { "fontSize": "22px" }, "fontFamily": "ff-tisa-web-pro, source-han-sans-traditional, Noto Sans TC, PingFang TC, Apple LiGothic Medium, Roboto, Microsoft JhengHei, Lucida Grande, Lucida Sans Unicode, sans-serif", "box": { "background": "#404040", "width": "450px", "mobileWidth": "77%", "spanPadding": "6px 15px", "mobilePadding": "12px 12px 14px 18px" } } }, "uuid": "26f51b92-23d6-4854-860c-f456305a00bb" };
-                            window[namespace][pkg].push(data);
-                        }
-                    }
-                })()
-        </script>
-        <div id="26f51b92-23d6-4854-860c-f456305a00bb"></div>
-
         <script type="text/javascript" crossorigin
             src="https://unpkg.com/@twreporter/scrollable-video@1.0.3/dist/main.86a0a5788205961bf35c.bundle.js"></script>
 
     </div>
-
     <!-- Ch4 -->
     <div id="area7" class="chapter-title-container">
         <div class="chapter-title">
@@ -238,22 +217,22 @@
 
         <div id="d701cc21-e61e-456c-81e5-9ddcc0ca57ea"></div>
         <script>
-                (function () {
-                    var namespace = '__twreporterEmbeddedData'
-                    var packageName = 'scrollable-image'
-                    if (typeof window != 'undefined') {
-                        if (!window[namespace]) {
-                            window[namespace] = {}
-                        }
-                        if (window[namespace] && !window[namespace][packageName]) {
-                            window[namespace][packageName] = []
-                        }
+            (function () {
+                var namespace = '__twreporterEmbeddedData'
+                var packageName = 'scrollable-image'
+                if (typeof window != 'undefined') {
+                    if (!window[namespace]) {
+                        window[namespace] = {}
                     }
-                    if (Array.isArray(window[namespace][packageName])) {
-                        var data = { "uuid": "d701cc21-e61e-456c-81e5-9ddcc0ca57ea", "lazyload": true, "data": ["https:\u002F\u002Fi.imgur.com\u002FnacqCh7.jpg", "https:\u002F\u002Fi.imgur.com\u002FUsPyqJZ.jpg", "https:\u002F\u002Fi.imgur.com\u002FYJqaSOT.jpg", "https:\u002F\u002Fi.imgur.com\u002FtZ28V8z.jpg"], "skipLoadLocationRegExp": "editor" }
-                        window[namespace][packageName].push(data)
+                    if (window[namespace] && !window[namespace][packageName]) {
+                        window[namespace][packageName] = []
                     }
-                })()
+                }
+                if (Array.isArray(window[namespace][packageName])) {
+                    var data = { "uuid": "d701cc21-e61e-456c-81e5-9ddcc0ca57ea", "lazyload": true, "data": ["https:\u002F\u002Fi.imgur.com\u002FnacqCh7.jpg", "https:\u002F\u002Fi.imgur.com\u002FUsPyqJZ.jpg", "https:\u002F\u002Fi.imgur.com\u002FYJqaSOT.jpg", "https:\u002F\u002Fi.imgur.com\u002FtZ28V8z.jpg"], "skipLoadLocationRegExp": "editor" }
+                    window[namespace][packageName].push(data)
+                }
+            })()
         </script>
         <script type="text/javascript"
             src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
