--- a/close-to-water/index.html
+++ b/close-to-water/index.html
@@ -110,13 +110,13 @@
     <div id="area4" class="container-fluid">
         <div id="ch2-bg">
             <div class="law-container rocksize1 law-pos1">
-                <img src="./materials/rock3.png">
+                <img src="./materials/rock3-2.png">
                 <div class="law-text">
                     2016《水域遊憩管理辦法》第5條第1項及第2項：水域遊憩活動管理機關依本條例第三十六條規定限制水域遊憩活動之種類、範圍、時間及行為時，應公告之。前項水域遊憩活動之種類、範圍、時間及土地使用，涉及其他機關權責範圍者，應協調該權責單位同意後辦理。
                 </div>
             </div>
             <div class="law-container rocksize1 law-pos2 hide">
-                <img src="./materials/rock3.png">
+                <img src="./materials/rock3-2.png">
                 <div class="law-text">2016《水域遊憩管理辦法》第6條：水域遊憩活動管理機關得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域。</div>
             </div>
             <div class="law-container rocksize2 law-pos3 hide">
@@ -158,29 +158,12 @@
             <h1>宜蘭冬山河的記憶與困境</h1>
         </div>
     </div>
-    <div id="area6" class="container-fluid" style="color:white;background-color:#888;min-height:500px">
-        <div id="20a14ba7-e563-4847-9af9-967882bbcedd"></div>
-        <script>
-            (function () {
-                var namespace = '__twreporterEmbeddedData';
-                var pkg = 'scrollable-video';
-                if (typeof window != 'undefined') {
-                    if (!window.hasOwnProperty(namespace)) {
-                        window[namespace] = {};
-                    }
-                    if (window[namespace] && !window[namespace].hasOwnProperty(pkg)) {
-                        window[namespace][pkg] = [];
-                    }
-                    if (Array.isArray(window[namespace][pkg])) {
-                        var data = { "video": { "sources": [{ "type": "video\u002Fmp4", "src": "./ch3_video_v1_s.mp4", "width": 1280, "height": 720 }] }, "captions": [{ "text": "這是宜蘭縣，", "time": 1 }, { "text": "一個由水組成的三角洲平原。", "time": 3 }, { "text": "每年下雨超過200天，\n年平均降雨量超過2700mm，\n比起全台平均約只有1800mm，\n居民的生活與水緊密相連。", "time": 5 }, { "text": "這是冬山河，", "time": 16 }, { "text": "宜蘭的第五大河流。", "time": 18 }, { "text": "發源於約1000公尺的新寮山，\n並在丸山、太和附近注入蘭陽平原。\n與舊時噶瑪蘭人的居住領域息息相關。", "time": 20 }, { "text": "它坡度落差大，攜帶大量泥沙，\n因此下游的冬山利澤等地區經常氾濫。", "time": 22 }, { "text": "民國63年，遭受「范迪」及「瓊絲」颱風的影響，\n冬山河不僅氾濫，更危及農業發展。\n宜蘭縣政府奉命進行整治工作。", "time": 25 }, { "text": "整治後變得整齊的冬山河，\n雖然解決了氾濫的問題，\n卻出現了大量的工業民用廢水污染。\n因此，地方居民及政府重新思考河川的定位。", "time": 28 }, { "text": "冬山河變成了兼具教育與景觀的場所，\n它是宜蘭人端午龍舟的回憶，\n也是許多縣內學生的環境教育場域。\n是親水的場域。", "time": 35 }, { "text": "就像是標點上的生態綠洲，\n是宜蘭縣綠色博覽會的舉辦地。", "time": 38 }, { "text": "然而，冬山河定位「親水」的現狀是，\n除了特定活動外，\n居民卻難以親近現在的冬山河。\n就像是生態綠洲的管轄權屬於縣政府。\n因為便於管理的關係，\n如果一般民眾要下水，\n必須先通過冗長的公文申請。\n且不一定會通過。", "time": 40 }, { "text": "但旁邊的舊河道又要找冬山鄉公所。", "time": 47 }, { "text": "讓我們看看另一個冬山河上的案例。", "time": 65 }, { "text": "這裡是著名的冬山河親水公園，\n也是台灣民眾可能都參與過的「童玩節」舉辦地。", "time": 69 }, { "text": "如果喜愛水上運動的人，\n想要乘著無動力SUP（立槳）\n從親水公園到靠近民居的舊河道，\n也可能會被開罰。", "time": 77 }, { "text": "畢竟現在利澤附近的舊河道，\n連管轄全都不清楚，\n在氾濫整治後，\n亂填土與佔據地的情形頻繁發生，\n有些在地民眾舉辦的親水活動，\n但都如曇花一現無法長久經營。", "time": 83 }, { "text": "除了縣政府工商旅遊處、農田水利署、鄉公所的管理外，\n當冬山河成了水上國手的水上訓練基地時，\n管轄機關還多了教育處。\n也就是非訓練選手的人無法下水。", "time": 96 }, { "text": "這是冬山河，\n宜蘭人的河流。", "time": 105 }, { "text": "但現在卻在政府的治理下，\n與民眾距離非常遙遠。", "time": 108 }], "appProps": { "captionsSetting": { "xBoxAlign": "right", "xPosition": "8.7%", "yBoxAlign": "bottom", "yPosition": "20px" }, "captionSetting": { "textAlign": "right" }, "secondsPer100vh": 1.5, "skipLoadLocationRegExp": "editor", "forcedPreloadVideo": true, "gsapVersion": "3.5.1", "scrollTriggerVersion": "3.5.1", "pollingTimeout": 700, "preloadCacheType": "force-cache" }, "theme": { "mq": { "mobileMaxWidth": "767px" }, "captions": { "color": "#fff", "link": { "color": "#a67a44", "underlineColor": "#a67a44" }, "lineHieght": "1.7", "mobileLineHeight": "1.7", "fontStyle": "normal", "fontWeight": "bold", "fontSize": "24px", "mobile": { "fontSize": "22px" }, "fontFamily": "ff-tisa-web-pro, source-han-sans-traditional, Noto Sans TC, PingFang TC, Apple LiGothic Medium, Roboto, Microsoft JhengHei, Lucida Grande, Lucida Sans Unicode, sans-serif", "box": { "background": "#404040", "width": "450px", "mobileWidth": "77%", "spanPadding": "6px 15px", "mobilePadding": "12px 12px 14px 18px" } } }, "uuid": "20a14ba7-e563-4847-9af9-967882bbcedd" };
-                        window[namespace][pkg].push(data);
-                    }
-                }
-            })()
-        </script>
-        <script type="text/javascript" crossorigin
-            src="https://unpkg.com/@twreporter/scrollable-video@1.0.3/dist/main.86a0a5788205961bf35c.bundle.js"></script>
-
+    <div id="area6" class="container-fluid" style="min-height:500px">
+        <iframe width="862" height="485" src="https://www.youtube.com/embed/vFVH28Qi-3I"
+            title="開放水域聯盟邀候選人簽署海洋國家前途決議文　盼加速水域開放｜20221110 公視中晝新聞" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
     </div>
     <!-- Ch4 -->
     <div id="area7" class="chapter-title-container">
@@ -249,7 +232,7 @@
             </div>
         </div>
 
-        <div class="slides" id="914887f0-f63f-4436-9c90-44dd7d3d933b"></div>
+        <div id="b81615e1-477f-4223-902f-ad89cacdb02d"></div>
         <script>
                 (function () {
                     var namespace = '__twreporterEmbeddedData'
@@ -263,7 +246,7 @@
                         }
                     }
                     if (Array.isArray(window[namespace][packageName])) {
-                        var data = { "uuid": "914887f0-f63f-4436-9c90-44dd7d3d933b", "lazyload": true, "data": ["https:\u002F\u002Fi.imgur.com\u002FcnMvu2H.jpg", "https:\u002F\u002Fi.imgur.com\u002FBwioBpC.jpg", "https:\u002F\u002Fi.imgur.com\u002FWaoTKtL.jpg", "https:\u002F\u002Fi.imgur.com\u002F6i6CY1e.jpg", "https:\u002F\u002Fi.imgur.com\u002FZetbCpO.jpg", "https:\u002F\u002Fi.imgur.com\u002FGU7KA0T.jpg", "https:\u002F\u002Fi.imgur.com\u002F5qElDsW.jpg"], "skipLoadLocationRegExp": "editor" }
+                        var data = { "uuid": "b81615e1-477f-4223-902f-ad89cacdb02d", "lazyload": true, "data": ["https:\u002F\u002Fi.imgur.com\u002FcnMvu2H.jpg", "https:\u002F\u002Fi.imgur.com\u002FhHQn6R5.jpg", "https:\u002F\u002Fi.imgur.com\u002FBwioBpC.jpg", "https:\u002F\u002Fi.imgur.com\u002F6i6CY1e.jpg", "https:\u002F\u002Fi.imgur.com\u002FZetbCpO.jpg", "https:\u002F\u002Fi.imgur.com\u002FGU7KA0T.jpg", "https:\u002F\u002Fi.imgur.com\u002F5qElDsW.jpg"], "skipLoadLocationRegExp": "editor" }
                         window[namespace][packageName].push(data)
                     }
                 })()
