modify content & design

--- a/close-to-water/index.html
+++ b/close-to-water/index.html
@@ -74,9 +74,9 @@
     <div class="trans">
         <div class="trans-text">
             <div class="">台灣各地的水域開放情形不一，但大多數的區域，依然是禁止為優先，開放為例外。</div>
-            <div class="pt5">只有少部分區域（像是高雄愛河，或台北新店溪）可以在特定時間下水進行遊憩活動。</div>
-            <div class="pt5">其他地方就算開放了，也大多為開放給特定業者或經營單位。</div>
-            <div class="pt5">民眾如果想要下水，大多得付費或經過冗長的申請過程，並且不一定會通過。</div>
+            <div class="pt5">只有少部分區域（像是高雄愛河、新北微風運河等）可以在特定時間下水進行遊憩活動。</div>
+            <div class="pt5">其他地方就算開放了，也大多僅開放給特定業者或經營單位。</div>
+            <div class="pt5">民眾如果想要下水，大多得付費或經過冗長的申請流程，並且不一定會通過。</div>
         </div>
     </div>
     <div id="area2" class="container-fluid" style="min-height:500px">
@@ -84,11 +84,7 @@
             <video id="ch1-video" src="./materials/ch1_video2.mp4"></video>
         </div>
         <div id="ch1-supplement" class="right-col hide">
-            <h3>這裡是古亭河濱公園旁的新店溪</h3>
-            <img src="./materials/1-1 河濱公園.jpg">
-            <div class="ch1-text">
-                根據公告，此處從上午六時至下午六時皆全面禁止水上遊憩活動
-            </div>
+            
         </div>
     </div>
 
@@ -115,32 +111,30 @@
                     2016《水域遊憩管理辦法》第5條第1項及第2項：水域遊憩活動管理機關依本條例第三十六條規定限制水域遊憩活動之種類、範圍、時間及行為時，應公告之。前項水域遊憩活動之種類、範圍、時間及土地使用，涉及其他機關權責範圍者，應協調該權責單位同意後辦理。
                 </div>
             </div>
-            <div class="law-container rocksize1 law-pos2 hide">
+            <div class="law-container rocksize1 law-pos2">
                 <img src="./materials/rock3-2.png">
                 <div class="law-text">2016《水域遊憩管理辦法》第6條：水域遊憩活動管理機關得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域。</div>
             </div>
-            <div class="law-container rocksize2 law-pos3 hide">
+            <div class="law-container rocksize2 law-pos3">
                 <img src="./materials/rock4.png">
                 <div class="law-text">
                     2019《發展觀光條例》第36條第1項：為維護遊客安全，水域遊憩活動管理機關得對水域遊憩活動之種類、範圍、時間及行為限制之，並得視水域環境及資源條件之狀況，公告禁止水域遊憩活動區域；其禁止、限制及應遵守事項之管理辦法，由主管機關會商有關機關定之。
                 </div>
             </div>
 
-            <div class="law-container rocksize2 law-pos4 hide">
+            <div class="law-container rocksize2 law-pos4">
                 <img src="./materials/rock4.png">
                 <div class="law-text">
                     2019《發展觀光條例》第60條第1項：於公告禁止區域從事水域遊憩活動或不遵守水域遊憩活動管理機關對有關水域遊憩活動所為種類、範圍、時間及行為之限制命令者，由其水域遊憩活動管理機關處新臺幣一萬元以上五萬元以下罰鍰，並禁止其活動。
                 </div>
             </div>
 
-            <div class="law-container rocksize3 law-pos5 hide">
+            <div class="law-container rocksize3 law-pos5">
                 <img src="./materials/rock2.png">
                 <div class="law-text">
                     2009～2021各縣市政府《公園管理自治條例》：在公園裡不得在水池或湖泊內游泳、沐浴、洗滌、網魚、釣魚、銼魚、放生、划船或其他污染毒害水質及傷害動植物之行為。但經主管機關公告在指定地點得划船、釣魚者，不在此限。
                 </div>
             </div>
-
-            <div id="detect-ch2">x</div>
         </div>
     </div>
     <div class="trans">
@@ -159,11 +153,10 @@
         </div>
     </div>
     <div id="area6" class="container-fluid" style="min-height:500px">
-        <iframe width="862" height="485" src="https://www.youtube.com/embed/vFVH28Qi-3I"
-            title="開放水域聯盟邀候選人簽署海洋國家前途決議文　盼加速水域開放｜20221110 公視中晝新聞" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen>
-        </iframe>
+        <iframe width="878" height="494" src="https://www.youtube.com/embed/VpVI-a25804" 
+        title="宜蘭冬山河的記憶與困境" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen></iframe>
     </div>
     <!-- Ch4 -->
     <div id="area7" class="chapter-title-container">
