--- a/close-to-water/index.html
+++ b/close-to-water/index.html
@@ -246,16 +246,17 @@
         </script>
         <script type="text/javascript"
             src="https://unpkg.com/@twreporter/scrollable-image@1.3.1/dist/main-1f135a15f5704958e631.bundle.js"></script>
-
     </div>
 
     <!-- Footer -->
     <footer id="area9" class="container-fluid" style="min-height: 200px;">
         <div class="text-block">
-            <div class="credit">專題統籌：廖芷瑩、陳宇亭</div>
-            <div class="credit">採訪攝影：廖芷瑩</div>
-            <div class="credit">網頁設計：陳宇亭</div>
-            <div class="credit">影音協力：黃宇丞</div>
+            <div class="mt20">專題統籌 | 廖芷瑩、陳宇亭</div>
+            <div class="mt20">採訪 | 廖芷瑩</div>
+            <div class="mt20">文字 | 廖芷瑩、陳宇亭</div>
+            <div class="mt20">程式 | 陳宇亭</div>
+            <div class="mt20">影片剪輯 | 黃宇丞、廖芷瑩</div>
+            <div class="mt20">資料蒐集 | 廖芷瑩、陳宇亭、黃宇丞</div>
         </div>
     </footer>
 </body>
