update ch3 video

--- a/close-to-water/index.html
+++ b/close-to-water/index.html
@@ -11,7 +11,7 @@
     <!-- customize CSS -->
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/chapter.css">
-    <!--  <link rel="stylesheet" href="./css/import.css"> -->
+    <link rel="icon" href="./materials/icon.png">
 
     <title>我們與水的距離</title>
 
@@ -29,6 +29,7 @@
         crossorigin="anonymous"></script>
     <script src="./js/control_scroll.js"></script>
     <script src="./js/control_ch1_video.js"></script>
+    <script src="./js/control_intro_scroll.js"></script>
 
 </head>
 
@@ -56,25 +57,25 @@
     </div>
     <div id="article-intro">
         <div class="pt15">
-            <div class="sticky-js">這是台灣的河川</div>
+            <div class="sticky-js" data-id="line1">這是台灣的河川</div>
         </div>
         <div class="pt15">
-            <div class="sticky-js">河川是我們生活的好夥伴</div>
-            <div class="sticky-js">過往</div>
-            <div class="sticky-js">住河岸的人</div>
-            <div class="sticky-js">靠著水討生活</div>
-            <div class="sticky-js">依水而生的人們也在上面學習游泳、玩樂與遊憩</div>
-            <div class="sticky-js">到了現在</div>
-            <div class="sticky-js">我們與水的關係</div>
-            <div class="sticky-js">卻只變成了排放污水的地方</div>
+            <div class="sticky-js" data-id="line2">河川是我們生活的好夥伴</div>
+            <div class="sticky-js" data-id="line3">過往</div>
+            <div class="sticky-js" data-id="line4">住河岸的人</div>
+            <div class="sticky-js" data-id="line5">靠著水討生活</div>
+            <div class="sticky-js" data-id="line6">依水而生的人們也在上面學習游泳、玩樂與遊憩</div>
+            <div class="sticky-js" data-id="line7">到了現在</div>
+            <div class="sticky-js" data-id="line8">我們與水的關係</div>
+            <div class="sticky-js" data-id="line9">卻只變成了排放污水的地方</div>
         </div>
         <div class="pt15">
-            <div class="sticky-js">不只是河川</div>
-            <div class="sticky-js">還有公園的湖泊</div>
-            <div class="sticky-js">遊憩區的水庫</div>
+            <div class="sticky-js" data-id="line10">不只是河川</div>
+            <div class="sticky-js" data-id="line11">還有公園的湖泊</div>
+            <div class="sticky-js" data-id="line12">遊憩區的水庫</div>
         </div>
         <div class="pt15">
-            <div class="sticky-js">台灣人民到底與水的距離有多遠？</div>
+            <div class="sticky-js" data-id="line13">台灣人民到底與水的距離有多遠？</div>
         </div>
     </div>
 
@@ -167,10 +168,10 @@
         </div>
     </div>
     <div id="area6" class="container-fluid" style="min-height:500px">
-        <iframe width="878" height="494" src="https://www.youtube.com/embed/VpVI-a25804" title="宜蘭冬山河的記憶與困境"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <iframe width="878" height="494" src="https://www.youtube.com/embed/PYdqZNNuhFY" title="宜蘭冬山河的記憶與困境" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+            allowfullscreen>
+        </iframe>
     </div>
     <!-- Ch4 -->
     <div id="area7" class="chapter-title-container">
