--- a/close-to-water/index.html
+++ b/close-to-water/index.html
@@ -29,7 +29,7 @@
         crossorigin="anonymous"></script>
     <script src="./js/control_scroll.js"></script>
     <script src="./js/control_ch1_video.js"></script>
-    <script src="./js/control_intro_scroll.js"></script>
+     <!-- <script src="./js/control_intro_scroll.js"></script> -->
 
 </head>
 
