--- a/close-to-water-challenge/closetowaterchallenge.html
+++ b/close-to-water-challenge/closetowaterchallenge.html
@@ -29,7 +29,6 @@
     </header>
 
     <section id="leading-block">
-        <!-- <img id="cover" src="../materials/cover.png"> -->
         <img class="cover-figure f1" src="./materials/cover-people4.png">
         <img class="cover-figure f2" src="./materials/cover-people1.png">
         <img class="cover-figure f3" src="./materials/cover-people5.png">
@@ -48,8 +47,8 @@
                 然而，幾分鐘後，帶領的李元治就被警察以《發展觀光條例》第36條開罰，並處罰鍰新台幣壹萬元。雖然他們不是第一次下水被警告，但李元治與同好們時常無法理解，為何平靜也無害的水面，在政府大舉號稱鼓勵民眾走親近自然後，我們還是無法自由的親近身邊的水域？
             </article>
             <div class="main-image-wrapper" style="margin-bottom: 70px;">
-                <img src="../materials/s1-lee.png" style="height: 60%; width: 60%;">
-                <img src="../materials/s1-leeticket.png" style="height: 65%; width: 65%;">
+                <img src="./materials/s1-lee.png" style="height: 60%; width: 60%;">
+                <img src="./materials/s1-leeticket.png" style="height: 65%; width: 65%;">
             </div>
             <article class="mt-20">
                 從事水域活動20年的李元治因為無法理解這樣的社會情況，因此早在被開罰一年多前，他就帶著自己的兒子，跑到當時被禁止的南澳海邊划獨木舟。他想證明，只要有足夠的安全措施與準備，台灣人親近的海與水，絕對會是我們生活的好友，而非危險的深淵。
@@ -58,12 +57,12 @@
                 在這幾年間，他與同好組成了「台灣開放水域聯盟」，並在全台灣尚未開放的水域中，觀察也爭取開放的機會，希望和他們一樣愛好水上活動的台灣人們，也可以都擁有近用自然的權利。
             </article>
             <div class="main-image-wrapper">
-                <img src="../materials/s1-leesocialmovementv2.jpg" style="height: 90%; width: 90%;">
+                <img src="./materials/s1-leesocialmovementv2.jpg" style="height: 90%; width: 90%;">
             </div>
         </section>
 
         <section id="T1" class="trans-section">
-            <img src="../materials/SUP.svg">
+            <img src="./materials/SUP.svg">
             <div class="water-animation">
                 <div class="water-wrapper">
                     <div class="water-wrap">
@@ -116,7 +115,7 @@
         </section>
 
         <section id="T2" class="trans-section">
-            <img src="../materials/SUP.svg">
+            <img src="./materials/SUP.svg">
             <div class="water-big-wrapper">
 				<div class="water-big-wrap">
 					<div class="water-big">
@@ -177,11 +176,11 @@
                 李元治在龍潭大湖被開罰的案子，後來申請了憲法法庭的釋憲。雖然憲法法庭並沒有通過審理，但15位大法官中，有6位支持的大法官寫了意見書（112年憲裁字第13號），並對其中的爭議給出他們認為社會應該要重視的議題方向。
             </article>
             <div class="center">
-                <img class="center-item" src="../materials/s3-judgement1.png">
+                <img class="center-item" src="./materials/s3-judgement1.png">
                 <article class="center-item">2023年03月29日，憲法法庭針對李元治再梅花湖及龍潭湖的裁罰事項做出裁定。</article>
             </div>
             <div class="center">
-                <img class="center-item" src="../materials/s3-judgement2.png">
+                <img class="center-item" src="./materials/s3-judgement2.png">
                 <artilce class="center-item">雖然憲法法庭決定不受理，但仍有6位大法官為此議題寫了意見書。</artilce>
             </div>
         </section>
@@ -268,7 +267,7 @@
         </section>
 
         <section id="T3" class="trans-section">
-            <img src="../materials/SUP.svg">
+            <img src="./materials/SUP.svg">
         </section>
 
         <section id="S4" class="article-section">
@@ -280,7 +279,7 @@
                 Monkey教練從小到大訓練的場地之一，就是冬山河的河道，因為國家在親水公園旁建有運動訓練基地，而Monkey和他的同學們，從小就在冬山河區段上訓練及比賽。恰巧的，冬山河也正是李元治和夥伴們時常下水的地方，因為他們提起，冬山河的水流若非颱風或大雨，平時河水非常緩和，對水上遊憩活動非常友善。
             </article>
             <div class="main-image-wrapper">
-                <img src="../materials/s5-localcoachmonkey.jpg" style="height: 70%; width: 70%;">
+                <img src="./materials/s5-localcoachmonkey.jpg" style="height: 70%; width: 70%;">
             </div>
             <article>
                 然而，這條優美的河道，事實上因為行政管轄之故，分屬於不同行政機關，各區段目前被設定的使用目標也不相同。
@@ -304,7 +303,7 @@
         </section>
 
         <section id="T4" class="trans-section">
-            <img src="../materials/SUP.svg">
+            <img src="./materials/SUP.svg">
         </section>
 
         <section id="S5" class="article-section2">
@@ -312,7 +311,7 @@
             <div class="perspective">
                 <div class="left">
                     <div class="figure">
-                        <img class="figure-img" src="../materials/S5-opWu.png">
+                        <img class="figure-img" src="./materials/S5-opWu.png">
                         <div class="figure-text">水上運動教練、救生員陳宏瑋</div>
                     </div>
                 </div>
@@ -329,7 +328,7 @@
             <div class="perspective">
                 <div class="left">
                     <div class="figure">
-                        <img class="figure-img" src="../materials/S5-opgov.png">
+                        <img class="figure-img" src="./materials/S5-opgov.png">
                         <div class="figure-text">救生教練林健鴻</div>
                     </div>
                 </div>
@@ -346,7 +345,7 @@
             <div class="perspective">
                 <div class="left">
                     <div id="figure3" class="figure">
-                        <img class="figure-img" src="../materials/S5-opHuang.png">
+                        <img class="figure-img" src="./materials/S5-opHuang.png">
                         <div class="figure-text">在地返鄉青年黃兵善</div>
                     </div>
                 </div>
@@ -363,7 +362,7 @@
             <div class="perspective">
                 <div class="left">
                     <div class="figure">
-                        <img class="figure-img" src="../materials/S5-opgov.png">
+                        <img class="figure-img" src="./materials/S5-opgov.png">
                         <div class="figure-text">冬山村村長林松輝</div>
                     </div>
                 </div>
