modify opening css

--- a/close-to-water-challenge/closetowaterchallenge.html
+++ b/close-to-water-challenge/closetowaterchallenge.html
@@ -68,11 +68,13 @@
             <div class="flip-container">
                 <div class="card figure">
                     <img src="./materials/open-don.jpg">
-                    <div class="ans hide">這裡是宜蘭冬山河，任意下水是違法的。廖芷瑩攝影</div>
+                    <div class="img-caption">廖芷瑩攝影</div>
+                    <div class="ans hide">這裡是宜蘭冬山河<br>任意下水是違法的</div>
                 </div>
                 <div class="card figure">
                     <img src="./materials/open-wei.jpg">
-                    <div class="ans hide">這裡是台北微風運河，民眾是可以下水的。照片取自維基百科</div>
+                    <div class="img-caption">照片取自維基百科</div>
+                    <div class="ans hide">這裡是台北微風運河<br>民眾可以隨意下水</div>
                 </div>
             </div>
             <button id="showAns">點我看答案</button>
