modify arg-point design

--- a/close-to-water-challenge/closetowaterchallenge.html
+++ b/close-to-water-challenge/closetowaterchallenge.html
@@ -68,7 +68,7 @@
             <div class="flip-container">
                 <div class="card figure">
                     <img src="./materials/open-don.jpg">
-                    <div class="img-caption">廖芷瑩攝影</div>
+                    <div class="img-caption">廖芷瑩／攝影</div>
                     <div class="ans hide">這裡是宜蘭冬山河<br>任意下水是違法的</div>
                 </div>
                 <div class="card figure">
@@ -159,8 +159,11 @@
             <article>
                 目前的水域管制，各地方政府，對許多水域，會因生態、安全等理由，以禁止和外包廠商為管理方式，為此釋憲案出上訴書的許家華律師提及，《發展觀光條例》理應是「發展觀光」，但如果依照目前地方政府的管理方式，一種是給特定廠商經營，但條件很嚴格，另一種是乾脆以危險之由，完全禁止，兩種其實都無助於《發展觀光條例》法條設置的原意，也就是促進地方觀光健全的發展。
             </article>
-            <div class="block">
-                <h3>爭議點一：下水自由應重新定義</h3>
+            <div class="arg-point">
+                <div class="title-s">
+                    <img class="icon" src="./materials/s3-icon.svg">
+                    <h3>爭議點一：下水自由應重新定義</h3>
+                </div>
                 <article>
                     因《觀光發展條例》第36條第1項，及第60條第1項的規範，地方政府能以危險之由，規範人民下水的自由。
                 </article>
@@ -170,8 +173,11 @@
                 </article>
             </div>
 
-            <div class="block">
-                <h3>爭議點二：中央與地方不同步</h3>
+            <div class="arg-point">
+                <div class="title-s">
+                    <img class="icon" src="./materials/s3-icon.svg">
+                    <h3>爭議點二：中央與地方不同步</h3>
+                </div>
                 <article>
                     中央2019年的「開放山林」政策，鼓勵人民走入自然，但地方政府依舊擔心民眾出意外，會有相關責任與輿論壓力。
                 </article>
@@ -181,8 +187,11 @@
                 </article>
             </div>
 
-            <div class="block">
-                <h3>爭議點三：人民基本權利的重新審視</h3>
+            <div class="arg-point">
+                <div class="title-s">
+                    <img class="icon" src="./materials/s3-icon.svg">
+                    <h3>爭議點三：人民基本權利的重新審視</h3>
+                </div>
                 <article>
                     許多民眾會好奇，使用自然真的是人民的基本權力嗎？還是這只是我們的娛樂休閒行為而已，和人民的基本自由沒有絕對關係？
                 </article>
@@ -191,7 +200,7 @@
                 </article>
             </div>
 
-            <div class="block">
+            <div class="block2">
                 <article>
                     目前的水域管制，各地方政府，對許多水域，會因生態、安全等理由，以禁止和外包廠商為管理方式，為此釋憲案出上訴書的許家華律師提及，《發展觀光條例》理應是「發展觀光」，但如果依照目前地方政府的管理方式，一種是給特定廠商經營，但條件很嚴格，另一種是乾脆以危險之由，完全禁止，兩種其實都無助於《發展觀光條例》法條設置的原意，也就是促進地方觀光健全的發展。
                 </article>
@@ -423,7 +432,7 @@
         </section>
 
         <section id="End" class="article-section hor-grid">
-            <h2>結語</h2>
+            <hr>
             <article>
                 台灣人離身旁的水還有多少距離？
             </article>
