--- a/close-to-water-challenge/closetowaterchallenge.html
+++ b/close-to-water-challenge/closetowaterchallenge.html
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="親水大挑戰">
-    <meta property="og:description" content="對於台灣的水，你的印象是什麼？
-        台灣是島國，更是河流眾多的土地，全國各地湖泊水域特邊多。然而，全台多處水域，既使他們平時流速緩和，但還是不開放給民眾下水。
-        這背後有法規限制，還有地方發展問題。關心水的人，又如何行動呢？">
-    <meta property="og:image" content="./materials/preview.jpg">
+    <meta property="og:description" content="對於台灣的水，你的印象是什麼？台灣是島國，更是河流眾多的土地，全國各地湖泊水域特邊多。然而，全台多處水域，既使他們平時流速緩和，但還是不開放給民眾下水。這背後有法規限制，還有地方發展問題。關心水的人，又如何行動呢？">
+    <meta property="og:image" content="./materials/preview.png">
 
     <title>親水大挑戰</title>
     <link rel="icon" href="./materials/icon.png">
