--- a/close-to-water-challenge/closetowaterchallenge.html
+++ b/close-to-water-challenge/closetowaterchallenge.html
@@ -191,7 +191,7 @@
                     <h3>爭議點三：人民基本權利的重新審視</h3>
                 </div>
                 <article>
-                    許多民眾會好奇，使用自然真的是人民的基本權力嗎？還是這只是我們的娛樂休閒行為而已，和人民的基本自由沒有絕對關係？
+                    許多民眾會好奇，使用自然真的是人民的基本權利嗎？還是這只是我們的娛樂休閒行為而已，和人民的基本自由沒有絕對關係？
                 </article>
                 <article>
                     大法官意見書中說明，我國憲法雖未明定「自然環境的公眾近用權」，但我們應重新檢討人民使用自然的基本權利。意見書中舉例，瑞典人民的憲法，除了保障特定土地或自然環境之財產權外，人民也享有憲法保障之公眾近用權，得以接近使用自然環境。但是「我憲法對於上開基本權利，並未明文規定。惟基於人民近用自然環境之理念，如將之從實定法提升為憲法層次，自可凸顯我憲法對於人民近用自然環境之重視。」大法官的意思也是說，隨著時代改變，人民近用自然的權利應重新被討論。
@@ -207,7 +207,7 @@
                         Turner</a>應觀光局邀請來台灣深度旅遊，她在<a
                         href="https://www.thetimes.co.uk/article/my-big-adventure-in-taiwan-qlgckt9mt">《泰唔士報》的專欄</a>中為此旅遊寫了一篇文章〈Why
                     this Asian Island is the most fascinating place to visit right now〉，裡頭提到，她觀察到台灣是一個風險迴避社會（risk-averse
-                    society），像是日月潭風光很好，但旁邊充滿警告標語，且只有在活動才能下水游泳。大法官認為，「此種消極避險之思維，究竟能防止多少實害，要難考證，但其壓抑親水本性丶箝制冒險精神、妨礙鱧魄鍛鍊，則可斷言！」
+                    society），像是日月潭風光很好，但旁邊充滿警告標語，且只有在活動才能下水游泳。大法官認為，「此種消極避險之思維，究竟能防止多少實害，要難考證，但其壓抑親水本性丶箝制冒險精神、妨礙體魄鍛鍊，則可斷言！」
                 </article>
             </div>
 
@@ -385,7 +385,7 @@
                 <div class="perspective opinion-right" data-aos="zoom-in-right" data-aos-delay="100">
                     <div class="left-col">
                         <article>
-                            冬山村村長在當地住了五十幾年，他說小時候都會在水邊玩，以前居民們可以自由運用水邊的資源，但有新的法規後，居民們都無法親近水。他認為，不論是外包或開放，都要和在地有更多的溝通討論。
+                            林松輝在當地住了五十幾年，他說小時候都會在水邊玩，以前居民們可以自由運用水邊的資源，但有新的法規後，居民們都無法親近水。他認為，不論是外包或開放，都要和在地有更多的溝通討論。
                         </article>
                         <article>
                             「你可以規定大家用救生衣，或者禁止做什麼，水難道只是政府的嗎？」
@@ -422,10 +422,10 @@
                 </div>
             </div>
             <article>
-                水域遊憩業者、救生教練、返鄉文化青年、在地居民，以及水域運動學者，對水域開放相關的業者經營、親水教育、在地發展、公民意見，以及提出不同看法。
+                許旻棋專長為海洋觀光遊憩規劃及水域遊憩活動管理等，並擔任多項國內政府水域運動規劃及相關研究計畫委員。他認為，目前國家水域政策應急起直追國際發展趨勢，全面推廣海洋及多元水域活動，除符合海洋國家發展原則，更有利興起社會大眾海洋休閒風氣。以責任自負的觀念，重新思考風險管理，讓社會大眾能共同正面支持海洋及水域遊憩活動的拓展。
             </article>
             <article>
-                水域遊憩業者吳宏偉點出，水域業者應該也要教育民眾，並且讓他們認識水，產業才有好的未來，人民也才能安心親近水；救生教練林健鴻則認為，討論水域開放時，政府也一定要同時考慮台灣的水域救生教育，救生觀念提升了，台灣人才能真的好好跟水相處；在地青年則用文化角度注重地方的人水關係，水域開放可以促進文化的認識，是我們也要考量的方向；冬山村村長林松輝則表明，把水外包，不顧民意，他認為是個不長遠的做法，而且容易引起民怨，討論水域開放時，也切必要注重在地聲音，多討論，多接納，才是在地和政策都要的未來；最後，許旻棋老師則表示，政府在管理思維上，也許可多思考民眾風險承擔的方法拓展，不用把責任全部放在政府身上，但管理還是必須進行。
+                「戶外活動的風險不一定都要由政府承擔，如果參與者要責任自負，可以選擇保險等⋯⋯過去的文化告訴我們海洋很危險，但這會讓我們離海岸很遠。」
             </article>
         </section>
 
