--- a/close-to-water-challenge/closetowaterchallenge.html
+++ b/close-to-water-challenge/closetowaterchallenge.html
@@ -75,7 +75,7 @@
                 <div class="card figure">
                     <img src="./materials/open-wei.jpg">
                     <div class="img-caption">照片取自維基百科</div>
-                    <div class="ans hide">這裡是台北微風運河<br>民眾可以隨意下水</div>
+                    <div class="ans hide">這裡是台北微風運河<br>開放民眾進行水上活動</div>
                 </div>
             </div>
             <button id="showAns">點我看答案</button>
