--- a/close-to-water-challenge/closetowaterchallenge.html
+++ b/close-to-water-challenge/closetowaterchallenge.html
@@ -416,7 +416,7 @@
                     </div>
                     <div class="right-col">
                         <article>
-                            許旻棋教授專長為海洋觀光遊憩規劃及水域遊憩活動管理等，並擔任多個國內政府水上運動規劃及相關研究案的評審委員。他認為，我們目前的確要跟上國際的腳步，推廣海洋或任何水域的活動。責任自負部分，還可以思考戶外保險的拓展。
+                            許旻棋專長為海洋觀光遊憩規劃及水域遊憩活動管理等，並擔任多項國內政府水域運動規劃及相關研究計畫委員。他認為，目前國家水域政策應急起直追國際發展趨勢，全面推廣海洋及多元水域活動，除符合海洋國家發展原則，更有利興起社會大眾海洋休閒風氣。以責任自負的觀念，重新思考風險管理，讓社會大眾能共同正面支持海洋及水域遊憩活動的拓展。
                         </article>
                         <article>
                             「戶外活動的風險不一定都要由政府承擔，如果參與者要責任自負，可以選擇保險等⋯⋯過去的文化告訴我們海洋很危險，但這會讓我們離海岸很遠。」
@@ -424,12 +424,6 @@
                     </div>
                 </div>
             </div>
-            <article>
-                許旻棋專長為海洋觀光遊憩規劃及水域遊憩活動管理等，並擔任多項國內政府水域運動規劃及相關研究計畫委員。他認為，目前國家水域政策應急起直追國際發展趨勢，全面推廣海洋及多元水域活動，除符合海洋國家發展原則，更有利興起社會大眾海洋休閒風氣。以責任自負的觀念，重新思考風險管理，讓社會大眾能共同正面支持海洋及水域遊憩活動的拓展。
-            </article>
-            <article>
-                「戶外活動的風險不一定都要由政府承擔，如果參與者要責任自負，可以選擇保險等⋯⋯過去的文化告訴我們海洋很危險，但這會讓我們離海岸很遠。」
-            </article>
         </section>
 
         <section id="End" class="article-section hor-grid">
@@ -438,10 +432,10 @@
                 台灣人離身旁的水還有多少距離？
             </article>
             <article>
-                其實還有一大段距離要游。
+                還有一大段距離要游。
             </article>
             <article>
-                但如同參與在水域抗爭、遊憩業者、在地文化工作者、民眾及學者都提到的，政府應該廣納意見，並逐步推動人們親近水域政策。而政策也應該改換管理思維，同大法官意見書所指，我們應重新思考台灣人親近自然的基本權，以及管理方式。最後，地方的水往往與地方脈絡息息相關，河溪湖同時也流藏許多在地人的文化與歷史，親近水更是認識在地文史的方式。親水在台灣的確是大挑戰，但引起公民討論，並慎思規劃，我們能划向更符合人民所需且自由的親近水域未來！
+                但如同參與在水域抗爭、遊憩業者、在地文化工作者、民眾及學者都提到的，政府應該廣納意見，並逐步推動人們親近水域政策。而政策也應該改換管理思維，同大法官意見書所指，我們應重新思考台灣人親近自然的基本權，以及管理方式。最後，地方的水往往與地方脈絡息息相關，河溪湖同時也流藏許多在地人的文化與歷史，親近水更是認識在地文史的方式。親水在台灣的確是大挑戰，引起公民討論，並慎思規劃，我們能划向更符合人民所需且自由的親近水域未來！
             </article>
         </section>
     </main>
