--- a/close-to-water-challenge/closetowaterchallenge.html
+++ b/close-to-water-challenge/closetowaterchallenge.html
@@ -69,12 +69,12 @@
             <div class="flip-container">
                 <div class="card figure">
                     <img src="./materials/open-don.jpg">
-                    <div class="img-caption">廖芷瑩／攝影</div>
+                    <div class="img-caption hide">廖芷瑩／攝影</div>
                     <div class="ans hide">這裡是宜蘭冬山河<br>任意下水是違法的</div>
                 </div>
                 <div class="card figure">
                     <img src="./materials/open-wei.jpg">
-                    <div class="img-caption">照片取自維基百科</div>
+                    <div class="img-caption hide">照片取自維基百科</div>
                     <div class="ans hide">這裡是台北微風運河<br>開放民眾進行水上活動</div>
                 </div>
             </div>
